// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feedback/> should render 1`] = `
.c1 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 2rem 0;
  color: #3e486e;
}

.c2 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c4 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c3 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7598d6;
  border-color: #7598d6;
  box-shadow: 0px 10px 30px rgba(117,152,214,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c7:link,
.c7:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):active,
.c7:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #9cb5e2;
  border-color: #9cb5e2;
}

.c7[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c9 + .c8 {
  margin-left: 1.6rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <header
          class="c3"
        >
          <h3
            class="c4"
          >
            <div
              class="c5"
            />
            Avez-vous trouvé la réponse à votre question ?
          </h3>
        </header>
        <p
          class="c6"
        >
          <button
            class="c7 c8 c9"
          >
            Non
          </button>
          <button
            class="c7 c8 c9"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer no 1`] = `
.c1 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 2rem 0;
  color: #3e486e;
}

.c2 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c4 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c3 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(255,112,103,0.26),0px 4px 5px rgba(255,112,103,0.35);
  opacity: 1;
}

.c10:link,
.c10:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c10:not([disabled]):hover,
.c10:not([disabled]):active,
.c10:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c10[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
}

.c12:focus,
.c12:hover,
.c12:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13 {
  height: 1.4rem;
  margin-left: 0.4rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c9:hover .c13 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100%;
}

.c7 {
  margin-bottom: 2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c11 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  margin-top: 2rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <header
          class="c3"
        >
          <h3
            class="c4"
          >
            <div
              class="c5"
            />
            Avez-vous trouvé la réponse à votre question ?
          </h3>
        </header>
        <form
          action="https://formspree.io/xbalrgzm"
          class="c6"
        >
          <p>
            <strong>
              Merci pour votre réponse !
            </strong>
          </p>
          <p>
            Vous souhaitez nous aider à améliorer le Code du travail numérique ? Laissez-nous un commentaire :
          </p>
          <input
            name="question"
            type="hidden"
            value="Query"
          />
          <input
            name="url"
            type="hidden"
            value="http://server/fiches/fiche1"
          />
          <input
            name="sourceType"
            type="hidden"
            value="Fiches Service Public"
          />
          <select
            class="c7"
            name="motif"
          >
            <option
              value="Les informations proposées ne sont pas à jour"
            >
              Les informations proposées ne sont pas à jour
            </option>
            <option
              value="Les informations me paraissent erronées"
            >
              Les informations me paraissent erronées
            </option>
            <option
              value="Les informations me paraissent incomplètes"
            >
              Les informations me paraissent incomplètes
            </option>
            <option
              value="Les informations me paraissent hors-sujet"
            >
              Les informations me paraissent hors-sujet
            </option>
            <option
              value="Je n'ai pas trouvé la réponse à ma question"
            >
              Je n'ai pas trouvé la réponse à ma question
            </option>
          </select>
          <textarea
            class="c7"
            name="message"
            placeholder="Les informations ..."
          />
          <div
            class="c8"
          >
            <button
              class="c9 c10"
            >
              Envoyer mon commentaire
            </button>
            <div
              class="c11"
            />
          </div>
        </form>
        <p>
          Pour obtenir une réponse à votre question de droit du travail, nous vous invitons à joindre les
           
          <button
            class="c9 c12"
          >
            services de renseignement
            <svg
              class="c13"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
              <polyline
                points="12 5 19 12 12 19"
              />
            </svg>
          </button>
          .
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer yes 1`] = `
.c1 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 2rem 0;
  color: #3e486e;
}

.c2 {
  padding: 1rem 2rem;
  color: #3e486e;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  background-color: #e4e8ef;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c4 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c3 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(255,112,103,0.26),0px 4px 5px rgba(255,112,103,0.35);
  opacity: 1;
}

.c9:link,
.c9:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c9:not([disabled]):hover,
.c9:not([disabled]):active,
.c9:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c9[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100%;
}

.c7 {
  margin-bottom: 2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c10 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  margin-top: 2rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1rem 2rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <header
          class="c3"
        >
          <h3
            class="c4"
          >
            <div
              class="c5"
            />
            Avez-vous trouvé la réponse à votre question ?
          </h3>
        </header>
        <form
          action="https://formspree.io/xbalrgzm"
          class="c6"
        >
          <p>
            <strong>
              Merci pour votre réponse !
            </strong>
          </p>
          <p>
            Vous souhaitez nous aider à améliorer le Code du travail numérique ? Laissez-nous un commentaire :
          </p>
          <input
            name="question"
            type="hidden"
            value="Query"
          />
          <input
            name="url"
            type="hidden"
            value="http://server/fiches/fiche1"
          />
          <input
            name="sourceType"
            type="hidden"
            value="Fiches Service Public"
          />
          <textarea
            class="c7"
            name="message"
            placeholder="Les informations ..."
          />
          <div
            class="c8"
          >
            <button
              class="c9"
            >
              Envoyer mon commentaire
            </button>
            <div
              class="c10"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should send piwik event when click no 1`] = `"[]"`;

exports[`<Feedback/> should send piwik event when click yes 1`] = `"[]"`;
